# dr-service

./: .gitignore  .gitmodules  Dockerfile  entryPoint.sh  pipeline-variables.groovy  pom.xml  renovate.json  set_log_level.sh
charts/eric-esoa-dr-service/: Chart.yaml  eric-product-info.yaml  values.yaml
charts/eric-esoa-dr-service/templates/: _edb_functions_dr.tpl  _helpers.tpl  alarm-certificate.yaml  deployment.yaml  pg-client-cert.yaml  server-certificate.yaml  service.yaml
charts/eric-esoa-dr-service/templates/rolebinding/: role-binding-config.yaml  role-binding.yaml  roleConfiguration.yaml
charts/eric-esoa-dr-service/templates/serviceaccount/: service-account.yaml
docker-compose/: .env  docker-compose.yml
eric-esoa-dr-api/: pom.xml
eric-esoa-dr-api/src/main/resources/: dr_v1.yaml
eric-esoa-dr-python/: .pypirc  pom.xml  update_token_pypirc.sh
eric-esoa-dr-python/scripts/: package.sh  publish.sh  pylint.sh
eric-esoa-dr-python/src/main/python/: README.md  pylintrc  pyproject.toml
eric-esoa-dr-python/src/main/python/bos/dr/clients/: __init__.py  restservice.py
eric-esoa-dr-service-jar/: pom.xml
eric-esoa-dr-service-jar/src/main/resources/: application.yaml  error.properties
performance/k6/: README.md
performance/k6/data/: docker_wiremock_data.json  enm_to_cts.json
performance/k6/docker/: docker-compose.yml
performance/k6/scripts/: discover_and_reconcile.js
performance/k6/setup/: copy_export_files.sh  ctsExport_TESTS_10.json  ctsExport_TESTS_100.json  enmExport_TESTS_10.xml  upload_feature_pack.sh
(+508 files in other folders)
